--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="principal contenedor">
         <div class="info">
             <form class="formulario">
-                <label for="city">Ingrese el nombre de la ciudad:</label>
+                <label for="city">Ingrese el nombre de la <span>ciudad</span>:</label>
                 <input type="text" placeholder="Ciudad" id="city">
                 <button id="consultaClima">Buscar
                     <span>
